    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====

    ==> 234 - 13/09/2007 - 0.9.3 release  <==

+ <mave> added norm and normalize for RealMat
B <mave> fixed a bug in GaussFunction constructor (Propertized version)
+ <mave> added LinearComboFunction
B <mave> fixed visibility bug in doxygen comments

    ==> 230 - 6/08/2007 - 0.9.2 release  <==

B <mave> resolved linkage problem with nMessages under windows

    ==> 228 - 2/07/2007 - 0.9.1 release <==

+ <mave> added ScaleFunction that scale the inputs vector of Cluster
+ <mave> added normalize method to RealVec for normalize it
+ <mave> added Random::flatRealVec to randomize a vector
+ <mave> added Random::flatRealMat to randomize a matrix

    ==> 224 - 5/06/2007 - 0.9.0 release <==

C <mave> renamed Updatable::getName() to name() 

    ==> 223 - 5/06/2007 <==

B <mave> fixed error while loading old-format XML files
C <mave> to Linker constructor by PropertySettings are now passed a pointer to BaseNeuralNet
+ <mave> added a generic data pointer (void*) to Variant and two template method for accessing it
B <mave> bugfix error in exporting template classes in Windows; added NNFW_TEMPLATE macro for 
		handling the exportation of template classes

    ==> 222 - 4/06/2007 <==

B <mave> bugfix in clone method of GaussFunction

    ==> 221 - 2/06/2007 <==

C <mave> new version of XML files; now the read-only properties are written
		as attributes of node <cluster> and passed to the constructor via
		Creatore registered into the Factory
+ <mave> add the method Propertized::convertStringTo for converting the string-type
		Variant readed from XML into the type required by class
