@@ -15,6 +15,10 @@ S <mave> comment goes here
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
 
+    ==> 236 - 29/10/2007 <==
+
+C <mave> scale, square, normalize, neg and step RealVec methods now returns a reference to itself
+
     ==> 234 - 13/09/2007 - 0.9.3 release  <==
 
 + <mave> added norm and normalize for RealMat
